--- a/main.html
+++ b/main.html
@@ -19,12 +19,23 @@
   	<div class="ryu-cool"></div>
 </div>
 
+<div class="instructions">
+<p>
+Click on Ryu to make him throw a Hadouken.
+</p>
+<p>
+Press and hold down the "x" key to make him strike his cool pose!
+</p>
+</div>
+
 <div class="hadouken">
 </div>
 	
 </div>
 
-<audio id="hadouken-sound" src="sound/hadouken.mp3">
+<audio id="hadouken-sound" src="sound/hadouken.mp3" type="audio/mpeg"></audio>
+<audio id="theme-sound" src="sound/street-fighter-theme.mp3" type="audio/mpeg"></audio>
+<audio id="cool-sound" src="sound/cool.mp3" type="audio/mpeg"></audio>
 
 </body>
 </html>
